import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group 'me.sunstorm'
version '2.0-SNAPSHOT'

allprojects {
    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(21))
        }
    }
    tasks.withType(JavaCompile) {
        options.encoding('UTF-8')
    }

    repositories {
        maven { url 'https://jitpack.io' }
        mavenCentral()
    }
}

dependencies {
    implementation project(':core')
}

shadowJar {
    transform(Log4j2PluginsCacheFileTransformer)
    archiveBaseName.set('ShowManager')
    archiveClassifier.set('')
    manifest {
        attributes(
                'Main-Class': 'me.sunstorm.showmanager.Bootstrap'
        )
    }
}

jar.enabled = false
assemble.dependsOn(shadowJar)

